kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eglas
  labels:
    name: eglas
