kubernetes/app-manifest.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: eglas-deployment
  namespace: eglas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eglas
  template:
    metadata:
      labels:
        app: eglas
    spec:
      containers:
        - name: eglas-app
          image: jovansimonoski/eglas_app:latest
          ports:
            - containerPort: 8080
