kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eglas-service
  namespace: eglas
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: eglas
  type: ClusterIP
