kubernetes/db-manifest.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eglas-db
  namespace: eglas
spec:
  replicas: 1
  serviceName: eglas-db-service
  selector:
    matchLabels:
      app: eglas-db
  template:
    metadata:
      labels:
        app: eglas-db
        namespace: eglas
    spec:
      containers:
        - name: eglas-db
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: eglas-db-storage
      volumes:
        - name: eglas-db-storage
          persistentVolumeClaim:
            claimName: eglas-db-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: eglas-db-service
  namespace: eglas
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: eglas-db
