kubernetes/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eglas-ingress
  namespace: eglas
spec:
  ingressClassName: traefik
  rules:
    - host: eglas.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eglas-service
                port:
                  number: 8080
